--- a/src/infranet_team1/templates/issue/write.html
+++ b/src/infranet_team1/templates/issue/write.html
@@ -9,7 +9,7 @@
         <div>
             <label for="clientSearchInput">고객사:</label>
             {# 여기에 name 속성 추가: 선택된 고객사 이름이 폼 데이터로 전송됩니다. #}
-            <input type="text" id="clientSearchInput" name="client_company_name_for_display" placeholder="고객사 이름 또는 ID 검색 (필수)" autocomplete="off" /> 
+            <input type="text" id="clientSearchInput" name="client_company_name_for_display" placeholder="고객사 이름 또는 ID 검색 (필수)" autocomplete="off" required/> 
             {# 추가: 선택된 고객사의 ID를 서버로 넘기기 위한 숨겨진 필드 (이건 DB 처리를 위해 필요) #}
             <input type="hidden" id="hiddenClientCompanyId" name="client_company_id" /> 
             
