--- a/src/infranet_team1/templates/write/write.html
+++ b/src/infranet_team1/templates/write/write.html
@@ -14,20 +14,20 @@
 
     <label>카테고리:
         <select name="category" required>
-            <option value="free" {% if post and post.category == 'free' %}selected{% endif %}>자유게시판</option>
-            <option value="qna" {% if post and post.category == 'qna' %}selected{% endif %}>질문과 답변</option>
-            <option value="notice" {% if post and post.category == 'notice' %}selected{% endif %}>공지사항</option>
+            <option value="free" {% if post and post['category'] == 'free' %}selected{% endif %}>자유게시판</option>
+            <option value="qna" {% if post and post['category'] == 'qna' %}selected{% endif %}>질문과 답변</option>
+            <option value="notice" {% if post and post['category'] == 'notice' %}selected{% endif %}>공지사항</option>
         </select>
     </label>
     <br/><br/>
 
     <label>제목:
-        <input type="text" name="title" value="{{ post.title if post else '' }}" required />
+        <input type="text" name="title" value="{{ post['title'] if post else '' }}" required />
     </label>
     <br/><br/>
 
     <label>내용:<br/>
-        <textarea name="content" rows="10" required>{{ post.content.strip() if post else '' }}</textarea>
+        <textarea name="content" rows="10" required>{{ post['content'].strip() if post else '' }}</textarea>
     </label>
     <br/><br/>
 
