--- a/src/infranet_team1/templates/task/stat.html
+++ b/src/infranet_team1/templates/task/stat.html
@@ -36,7 +36,8 @@ window.addEventListener('DOMContentLoaded', () => {
           options: {
             responsive: false,
             plugins: { title: { display: true, text: chartTitle } },
-            scales: { x: { stacked: true }, y: { stacked: true, beginAtZero: true } }
+            scales: { x: { stacked: true },
+                      y: { stacked: true, beginAtZero: true, ticks: { stepSize: 1 } } }
           }
         });
       });
