base.html 오탈자 수정

--- a/src/intranet_team1/templates/base.html
+++ b/src/intranet_team1/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8" />
-    <title>{% block title %}Team Infranet{% endblock %}</title>
+    <title>{% block title %}Team1 Intranet{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
         <div class="header-section header-left">
             <a href="/" class="logo">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 12L4 4L12 4L12 12L4 12Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 12L12 20H20V12H12Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M4 12L12 20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                <span>Team Infranet</span>
+                <span>Team1 Intranet</span>
             </a>
         </div>
 
